--- a/intranet/htdocs/intranet-tmpl/changepassword.tmpl
+++ b/intranet/htdocs/intranet-tmpl/changepassword.tmpl
@@ -85,30 +85,58 @@ $(document).ready(function() {
 [% END %]
 
 <fieldset>
+    
     <legend class="titulo_legend">[% 'Cambio de contrase&ntilde;a' | i18n %]</legend>
-    <ul>
-        <li class="sub_item">
+      <section class="center-section-form">
+       <form class="form-horizontal" onsubmit="false;">
+          
+             <div class="control-group">
+                           <label class="control-label" for="actualpassword">[% "Contrase&ntilde;a Actual" | i18n %]</label>
+                           <div class="controls">
+                                    <input type="password" class="input focused" id="actualpassword" name="actualpassword" tabindex="1">
+                           </div>
+              </div>
+              <div class="control-group">
+                           <label class="control-label" for="newpassword1">[% "Nueva Contrase&ntilde;a" | i18n %]</label>
+                           <div class="controls">
+                                    <input type="password" class="input focused" id="newpassword1" name="newpassword1" tabindex="2">
+                           </div>
+              </div>
+              <div class="control-group">
+                           <label class="control-label" for="newpassword2">[% "Repetir contrase&ntilde;a" | i18n %]</label>
+                           <div class="controls">
+                                    <input type="password" class="input focused" id="newpassword2" name="newpassword2" tabindex="2">
+                           </div>
+              </div>
+        
+                      
+
+       <!-- <li class="sub_item">
             <label for="actualpassword">[% 'Contrase&ntilde;a Actual' | i18n %]:</label>
             <input type="password" name="actualpassword" id="actualpassword">
-        </li>
-        <li class="sub_item">
+        </li>-->
+      <!--  <li class="sub_item">
             <label for="newpassword1">[% 'Nueva Contrase&ntilde;a' | i18n %]:</label>
             <input type="password" name="newpassword1" id="newpassword1">
-        </li>
-        <li class="sub_item">
+        </li>-->
+      <!--  <li class="sub_item">
             <label for="newpassword2">[% 'Repetir contrase&ntilde;a' | i18n %]:</label>
             <input type="password" name="newpassword2" id="newpassword2">
-        </li>
-        [% PERL %]
-                            print C4::AR::Filtros::to_Button(   text    => "[% 'Confirmar contrase&ntilde;a' | i18n %]",
-                                                                boton   => "boton_agregar",
-                                                                onClick => "guardarCambiarPassword();",
-                                                                title   => "[% 'Confirmar contrase&ntilde;a' | i18n %]",
-                                    ) ;
-        [% END %]
+        </li>-->
+              <div class="form-actions">
+                  [% PERL %]
+                                      print C4::AR::Filtros::to_Button(   text    => "[% 'Confirmar contrase&ntilde;a' | i18n %]",
+                                                                          boton   => "boton_agregar",
+                                                                          onClick => "guardarCambiarPassword();",
+                                                                          title   => "[% 'Confirmar contrase&ntilde;a' | i18n %]",
+                                                                          inline  => "1",
+                                              ) ;
+                  [% END %]
+              </div>
 
-
-    </ul>
+               
+        </form>
+   </section>
 </fieldset>
 
 [% INCLUDE 'intranet-bottom.inc' %]
