--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
@@ -134,6 +134,12 @@ var loaderPath= "";
 	                       </ul>
 	
 	</div>
+
+    <form id="formCambioPassword" method="get" action="/meran/usuarios/change_password.pl">
+               <input type="hidden" value="[% token %]" name="token">
+    </form>
+
+
      <div class="span12" >
                 <dl>
                       <li id="foto"> 
