--- a/intranet/htdocs/intranet-tmpl/usuarios/potenciales/buscarUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/potenciales/buscarUsuario.tmpl
@@ -157,14 +157,16 @@ $(document).ready(function() {
               </div>
               <input type="checkbox" name="habilitados_filter" id="habilitados_filter">[% " Mostrar s&oacute;lo usuarios habilitados"| i18n %]
               <br>
+             
               [% PERL %]
               print C4::AR::Filtros::setHelpInput(
-                                                   text =>"[% 'Navegue por las pesta&ntilde;as para acceder a los distintos tipos de b&uacute;squeda' | i18n %]",
-                                                   class => "info"
+                                                   text =>"[% ' Navegue por las pesta&ntilde;as para acceder a los distintos tipos de b&uacute;squeda' | i18n %]",
+                                                   class => "info",
+                                                   icon => "icon-info-sign",
                                                     
               );
               [% END %]
-    
+  
     </section>
 
 </fieldset>
