--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/buscarUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/buscarUsuario.tmpl
@@ -38,7 +38,9 @@ $(document).ready(function() {
               [% PERL %]
               print C4::AR::Filtros::setHelpInput(
                                                    text =>"[% 'Navegue por las pesta&ntilde;as para acceder a los distintos tipos de b&uacute;squeda' | i18n %]",
-                                                   class => "info"
+                                                   class => "info",
+                                                   icon => 'icon-info-sign',
+                                                   
                                                     
               );
               [% END %]
