--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/estructuraCatalo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/estructuraCatalo.tmpl
@@ -529,7 +529,7 @@ function updateModificarEstructuraCatalogacion(responseText){
 <form class="form-horizontal">
     <fieldset>
     <legend>[% "Seleccione el nivel:" | i18n %]</legend>
-    
+    <section class="center-section-form">
     <div class="control-group">
         <label class="control-label" for="niveles_id"> [% "Nivel" | i18n %]: </label>
         <div class="controls">
@@ -552,7 +552,7 @@ function updateModificarEstructuraCatalogacion(responseText){
             [% selectItemType %]
         </div>
     </div>
-
+    </section>
 </fieldset>
 </form>
 
