--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/mostrarCatalogacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/mostrarCatalogacion.tmpl
@@ -9,9 +9,9 @@
       });
 </script>
 
-<fieldset class="resultados_busqueda">
-    <legend class="titulo_legend trigger click">[% "Campos Modificados del nivel" | i18n %]:</legend>
-        <div class="datos_tabla_div" id="datos_tabla_div">
+<fieldset>
+    <legend>[% "Campos Modificados del nivel" | i18n %]:</legend>
+        <div>
         
         [% PERL %]
                 print C4::AR::Filtros::tableHeader(   
