--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/detalleTablaCampoVisualizacionOpac.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/detalleTablaCampoVisualizacionOpac.tmpl
@@ -25,7 +25,7 @@
     });
 </script>
 <fieldset>
-    <legend class="titulo_legend trigger click">[% "Configuraci&oacute;n de la Visualizaci&oacute;n de Campo:" | i18n %]</legend> 
+    <legend>[% "Configuraci&oacute;n de la Visualizaci&oacute;n de Campo:" | i18n %]</legend> 
     
         [% PERL %]
                 print C4::AR::Filtros::tableHeader(   
