--- a/intranet/htdocs/intranet-tmpl/includes/partials/modificar_value_input.tmpl
+++ b/intranet/htdocs/intranet-tmpl/includes/partials/modificar_value_input.tmpl
@@ -1,4 +1,4 @@
-
+<section class="center-section-form">
 <div id="div_container_modify_value">
     <form class="form-horizontal" onsubmit="return false">
         <fieldset>
@@ -14,10 +14,11 @@
         </div>
         
          <div class="form-actions">
-            <button class="btn btn-large btn-primary" onclick="[% function %]" id="unique_modify_button">[% 'Actualizar formato' | i18n %]</button>
+            <button class="btn btn-primary" onclick="[% function %]" id="unique_modify_button">[% 'Actualizar formato' | i18n %]</button>
          </div>
          
         </fieldset>
     </form>
 </div>
+</section>
 
