--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/agregarCampoMARC.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/agregarCampoMARC.tmpl
@@ -3,7 +3,7 @@
 <form class="form-horizontal">
     <fieldset>
     <legend>[% 'Agregar campo Marc para el nivel' | i18n %] [% nivel %]:</legend>
-    
+    <section class="center-section-form">
     <div class="control-group">
         <label class="control-label" for="campoX"> [% "Seleccion" | i18n %]: </label>
         <div class="controls">
@@ -123,6 +123,6 @@
         [% END %]
     
     </div>
-
+    </section>
 </fieldset>
 </form>
