--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/modificarCampoMARC.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/modificarCampoMARC.tmpl
@@ -10,7 +10,7 @@
 <form class="form-horizontal">
     <fieldset>
     <legend>[% 'Modificar campo Marc para el nivel' | i18n %] [% nivel %]:</legend>
-    
+    <section class="center-section-form">
     <div class="control-group">
         <label class="control-label" for="tipo_nivel3_id"> [% "Esquema" | i18n %]: </label>
         <div class="controls">
@@ -125,7 +125,7 @@
     [% END %]
     
     </div>
-
+    </section>
 </fieldset>
 </form>
 [% ELSE %]
