--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/visualizacionOpac.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/visualizacionOpac.tmpl
@@ -35,6 +35,8 @@ $(document).ready(function() {
 <form class="form-horizontal">
     <fieldset>
         <legend>[% "Seleccione el esquema a configurar:" | i18n %]</legend>
+        <section class="center-section-form">
+        
         [% combo_perfiles %]
 
         [% PERL %]
@@ -49,6 +51,7 @@ $(document).ready(function() {
             <option value="2">Nivel 2</option>
             <option value="3">Nivel 3</option>
         </select>
+        </section>
     </fieldset>
 </form>
 <div id="result"></div>
