--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalleRegistroMARC.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalleRegistroMARC.tmpl
@@ -37,24 +37,7 @@
         </div>
 
   <div class="tab-pane fade" id="VP">
-    <fieldset>
-           <legend>[% "get Niveles test" | i18n %]</legend>
-				[% GRUPOS = registro_importacion.getNiveles %]
-				Registro:
-				[% GRUPOS.registro.as_formatted %]
-                [% FOREACH grupo IN GRUPOS.grupos %]
-					<fieldset>
-					<legend>[% "Grupo" | i18n %]</legend>
-					[% grupo.grupo.as_formatted %]
-					[% FOREACH ejemplar IN grupo.ejemplares %]
-					<fieldset>
-					<legend>[% "Ejemplar" | i18n %]</legend>
-						[% ejemplar.as_formatted %]
-					 </fieldset>
-					[% END %]
-					</fieldset>
-                [% END %]               
-    </fieldset>               
+            
     <fieldset>
            <legend>[% "Detalles de Nivel 1 registro" | i18n %] [% id1 %] ([% nivel1_template %])</legend>
 
@@ -68,46 +51,6 @@
                         [% END %]
                 [% END %]
             </ul>
-
-        [% IF estadoDeColeccion %]
-        <div id="fieldset_estado_coleccion_[% id1 %]">
-            <fieldset>
-                <legend class="trigger trigger_estado_coleccion_[% id1 %] click">[% "Estado de Colecci&oacute;n" | i18n %]</legend>
-                    <div id="estado_coleccion[% id1 %]" class="estado_coleccion[% id1 %]">
-
-                          <ul class="listado_sin_margen estado_coleccion">
-                            [% FOREACH anio IN estadoDeColeccion.keys.sort %]
-                                [% IF estadoDeColeccion.$anio.keys %]
-                                <li>
-                                    [% IF anio != '#' %]<b>[% anio %]</b>[% END %]
-                                    [% FOREACH volumen IN estadoDeColeccion.$anio.keys.sort %]
-                                        [% IF volumen != '#' %][% volumen  %][% END %]
-                                        (
-                                        [% FOREACH fasciculo IN estadoDeColeccion.$anio.$volumen.keys.sort %]
-                                             [% fasciculo %]
-                                        [% END %]
-                                        )
-                                    [% END %]
-                                </li>
-                                [% END %]
-                            [% END %]
-                            </ul>
-
-                                    [% IF issn %]
-                                        <div style="position: relative; float:right;">
-                                            <div class="google-books">
-                                                <a id="ISSN:[% issn %]"  style="display:none" target="_blank">
-                                                    <img src="/includes/css/gbs_preview_button1.gif" border="0" style="margin: 0"/>
-                                                </a>
-                                            </div>
-                                            <script src="http://books.google.com/books?jscmd=viewapi&bibkeys=ISSN:[% issn %]&callback=ProcessGBSBookInfo"></script>
-                                        </div>
-                                    [% END %]
-
-                    </div>
-            </fieldset>
-        </div>
-    [% END %] <!-- End de If estadoColeccion  -->
 
         [% "N&uacute;mero Total de Ejemplares" | i18n %]:<b> [% cantItemN1 %]</b>
         </div>
@@ -156,13 +99,104 @@
                                     [% END %]
                                 [% END %] <!-- END FOREACH nivel2_array -->
                                 <li>
-                                        [% INCLUDE "estructura/ejemplaresDelGrupo.tmpl" %]
+                                    
+                                    
+                                    
+                                    
+                                    [% IF cant_nivel3 %]
+		<script>
+		
+		    $(document).ready(function(){
+		        checkedAll("select_all"+"[% id2 %]", "checkEjemplares"+"[% id2 %]");
+		        $('.fancylink').fancybox();
+		    });
+		
+		</script>
+		
+		<fieldset>
+		    <legend class="trigger trigger_2_[% id2 %] click">[% "Ejemplares" | i18n %]</legend>
+		    <div id="ejemplaresDelGrupo[% id2 %]" class="ejemplaresDelGrupo[% id2 %]" >
+					<div class="alert alert-info">
+					    <dl>
+							<dt class="inline left rightMargin">[% "Ejemplares Disponibles:"|i18n %]</dt>
+				               <dd> [% disponibles %]</dd>
+				        </dl>
+					</div>                
+
+					<form id="tablaEjemplares[% id2 %]" name="tablaEjemplares[% id2 %]" action="[% url_prefix %]/catalogacion/barcode_gen.pl" method="post">
+                        [% PERL %]
+                            print C4::AR::Filtros::tableHeader(   
+                                                                    id              => "tabla_ejemplares[% id2 %]",
+                                                                    class           => "",
+                                                                    selectAll_id    => "select_all[% id2 %]",
+                                                                    columns         => ['[% "Sig. Top."|i18n %]',
+																						'[% "C&oacute;digo"|i18n %]',
+																						'[% "Disponibilidad"|i18n %]',
+                                                                                        '[% "Estado"|i18n %]',
+                                                                                       ]
+                                                                    
+                                        ) ;
+                        [% END %]
+						
+                        <tbody>
+						[% FOREACH nivel3 %]
+								<tr>
+						                
+						                <td>[% signatura_topografica %]</td>
+						                <td>[% barcode %]</td>
+						                <td>[% disponibilidad %]</td>
+						                <td>[% estado %] </td>
+	
+	                            
+						                <td>
+						
+						                    [% IF nivel3_obj.getNota != "" %]
+	
+	                                              <div id="nota_ejemplar_[% id3 %]" style="display:none">[% nivel3_obj.getNota %]</div>	
+	
+						                          [% PERL %]
+						                                  print C4::AR::Filtros::to_Icon( 
+						                                                                  boton         => "icon_globo",
+						                                                                  title         => "[% nivel3_obj.getNota %]",
+						                                                                  alternClass   => "botonCentradoTabla",
+	                                                                                      onClick       => "verNota('[% id3 %]');",
+						                                                              ) ;
+						                          [% END %]
+	
+						                    [% ELSE %]
+						                       ---
+						                    [% END %]
+						                </td>
+						      </tr>
+					[%   IF loop.last %]
+					</tbody>
+
+					[% END %]<!-- END IF loop.last -->
+					
+					
+					[% END %]<!-- END FOREACH NIVEL 3 -->
+                      </tbody>
+                  </form>
+              </table>
+    </div> <!--end <div id="ejemplaresDelGrupo -->
+</fieldset>
+
+[% ELSE %]
+		<div class="alert fade in">
+           <strong>[% 'Este grupo no dispone de ejemplares' | i18n %]</strong>
+		</div>    
+[% END %]
+                                    
+                                    
+                                    
+                                    
+                                    
+                                    
+                                    
+                                    
+                                    
+                                    
                                 </li>
-                                [% IF nivel1_analiticas_cant %]
-                                    <li>
-                                        [% INCLUDE "estructura/analiticasDelGrupo.tmpl" %]
-                                    </li>
-                                [% END %]
                             </ul>
 
                 </div> <!--Fin <div id="grupo[  id2 ]-->
