--- a/intranet/htdocs/intranet-tmpl/admin/permisos/permisos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/permisos/permisos.tmpl
@@ -9,7 +9,7 @@
     });
 </script>
 
-<h3>[% "Administraci&oacute;n de permisos" | i18n %]</h3>
+<div class="title">[% "Administraci&oacute;n de permisos" | i18n %]</div>
 
 [% INCLUDE "partials/admin/_permisos.inc" %]
 
