--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
@@ -257,7 +257,6 @@
 <script type="text/javascript">makeToggle('ejemplaresDelGrupo[% id2 %]','trigger_2_[% id2 %]',null,false);</script>
 [% ELSE %]
     [% IF nivel2_template == 'ANA' %]
-        <h4 class="ejemplares_grupo">[% 'aca va el link al registro padre de la analitica' | i18n %]</h4>        
 
             [% PERL %]
                 print C4::AR::Filtros::link_to(   text      => "Detalle del registro padre",
@@ -265,6 +264,7 @@
                                                   params    => ["id1=[% nivel1_padre %]"],
                                                   title     => "[% 'Detalle del registro padre' | i18n %]",
                                                   blank     => 1,
+                                                  class     => 'btn btn-warning'
                                             );
             [% END %]
 
