--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/analiticasDelGrupo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/analiticasDelGrupo.tmpl
@@ -1,3 +1,4 @@
+[% IF tiene_analiticas %]
 		<script>
 		
 		    $(document).ready(function(){
@@ -10,19 +11,20 @@
 		<fieldset class="trigger">
 		    <legend class="trigger trigger_analiticas_[% id2 %] click">[% "Anal&iacute;ticas" | i18n %]</legend>
 		    <div id="analiticasDelGrupo[% id2 %]" class="analiticasDelGrupo[% id2 %]" >
-                        [% FOREACH nivel1_analiticas_array %]
-						<dl>  
-                            [% FOREACH nivel1_analitica %]
-                                [% IF liblibrarian %]
-                                    [% IF dato %]
-                                         <dt class="inline left rightMargin">[% liblibrarian %]:&nbsp;</dt> 
-                                         <dd>[% dato %]&nbsp;</dd>
-                                    [% END %]
-                                [% END %]
-                            [% END %] <!-- END FOREACH nivel1_analitica -->
-						</dl>
-                        [% END %]  <!-- END FOREACH nivel1_analiticas_array -->      
+                [% FOREACH nivel1_analiticas_array %]
+                <dl>  
+                    [% FOREACH nivel1_analitica %]
+                        [% IF liblibrarian %]
+                            [% IF dato %]
+                                  <dt class="inline left rightMargin">[% liblibrarian %]:&nbsp;</dt> 
+                                  <dd>[% dato %]&nbsp;</dd>
+                            [% END %]
+                        [% END %]
+                    [% END %] <!-- END FOREACH nivel1_analitica -->
+                </dl>
+                [% END %]  <!-- END FOREACH nivel1_analiticas_array -->      
 		    </div> <!--end <div id="analiticasDelGrupo -->
 		</fieldset>
 		<script type="text/javascript">makeToggle('analiticasDelGrupo[% id2 %]','trigger_analiticas_[% id2 %]',null,true);</script>
+[% END %]
   
