--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
@@ -68,6 +68,7 @@ $(document).ready( function() {
         $('#datos_del_leader').hide();
         ACTION                  = "AGREGAR_ANALITICA";
         ID_N2_PADRE             = [% id2 %];
+        ID_N1_PADRE             = [% id1 %];
     [% END %]
 
     $('#datos_indice').hide();
