--- a/intranet/htdocs/intranet-tmpl/catalogacion/configuracion/barcode_gen_setup.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/configuracion/barcode_gen_setup.tmpl
@@ -63,7 +63,7 @@
 
 <input type="hidden" id="idEncabezado">
 
-<h3>[% 'Configuraci&oacute;n de formatos de Barcode' | i18n %]</h3>
+<div class="title">[% 'Configuraci&oacute;n de formatos de Barcode' | i18n %]</div>
 
 <fieldset>
     <legend>[% "Seleccione el tipo de documento a configurar:" | i18n %]</legend>
