--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/visualizacionOpac.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/visualizacionOpac.tmpl
@@ -31,7 +31,7 @@ $(document).ready(function() {
 
 <input type="hidden" id="idEncabezado">
 
-<h3>[% 'Visualizaci&oacute;n de campos MARC en OPAC' | i18n %]</h3>
+<div class="title">[% 'Visualizaci&oacute;n de campos MARC en OPAC' | i18n %]</div>
 <form class="form-horizontal">
     <fieldset>
         <legend>[% "Seleccione el esquema a configurar:" | i18n %]</legend>
