--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalle_esquema.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalle_esquema.tmpl
@@ -65,9 +65,9 @@
 	                                <td>
 	                                    [% PERL %]
                                             print C4::AR::Filtros::action_button( 
-                                                                          button    => "btn click",
+                                                                          button    => "btn click btn-danger",
                                                                           action    => "eliminarEsquema([% id3 %])", 
-                                                                          icon      => "icon-remove",
+                                                                          icon      => "icon-remove icon-white",
                                                                           title     => "",
                                                                       ) ;
 
