--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/esquemas_importacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/esquemas_importacion.tmpl
@@ -17,7 +17,7 @@
     });
 </script>
 
-<h3>[% "Administraci&oacute;n de esquemas de importaci&oacute;n" | i18n %]</h3>
+<div class="title">[% "Administraci&oacute;n de esquemas de importaci&oacute;n" | i18n %]</div>
 </br>
 <div>
     <form class="form-horizontal" onsubmit="return false">
