--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/estructuraCatalo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/estructuraCatalo.tmpl
@@ -524,7 +524,7 @@ function updateModificarEstructuraCatalogacion(responseText){
     print C4::AR::Filtros::ayuda_marc() ;
 [% END %]
 
-<h3>Configuraci&oacute;n del formulario de carga</h3>
+<div class="title">Configuraci&oacute;n del formulario de carga</div>
 
 <form class="form-horizontal">
     <fieldset>
