--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/buscarUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/buscarUsuario.tmpl
@@ -11,10 +11,11 @@ $(document).ready(function() {
 
 </script>
 
+<div class="title">[% "B&uacute;squeda de Usuarios Reales" | i18n %]</div>
 <!--<div class="titulos" >[% "B&uacute;squeda de Usuarios Reales" | i18n %]</div>-->
 <fieldset>
-    <legend>[% "B&uacute;squeda de Usuarios Reales" | i18n %]</legend>
-    
+    <!--<legend>[% "B&uacute;squeda de Usuarios Reales" | i18n %]</legend>-->
+   
     <section class="center-section-form">
 
       [% PERL %]
